// Copyright 2021 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wrappers;

import "gogoproto/gogo.proto";

option go_package = "github.com/gravitational/teleport/api/types/wrappers";
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

// StringValues is a list of strings.
message StringValues {
  repeated string Values = 1;
}

// LabelValues is a list of key value pairs, where key is a string
// and value is a list of string values.
message LabelValues {
  // Values contains key value pairs.
  map<string, StringValues> Values = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "labels"
  ];
}

// CustomType is a json protobuf representation of a Go struct. This is
// useful when defining customtypes for use with the (gogoproto.customtype) extension.
message CustomType {
  // Bytes is the marshalled json data of a struct.
  bytes Bytes = 1 [(gogoproto.jsontag) = "json"];
}
